allow node name changing
